[misc] replacing new Character() with Character.valueOf() method